--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       max-width: 1200px;
       margin: 0 auto;
       padding: 20px;
-      background-color: #f5f5f5;
-      color: #333;
+      background-color: #333;
+      color: #f5f5f5;
     }
 
     header {
@@ -36,13 +36,13 @@
     }
 
     .game-card {
-      background: white;
+      background: #353842;
       border-radius: 8px;
       overflow: hidden;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       text-decoration: none;
-      color: inherit;
+      color: lavender;
       height: 100%;
     }
 
@@ -63,7 +63,7 @@
 
     .game-card h2 {
       margin-top: 0;
-      color: #2c3e50;
+      color: #5e7a96;
     }
 
     footer {
