Begin updating page with correct information

--- a/ds1/achievements/enkindle/index.html
+++ b/ds1/achievements/enkindle/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knight's Honor</title>
+    <title>Enkindle</title>
     <style>
         :root {
             --background: #121212;
@@ -114,7 +114,7 @@
             padding: 5px 10px;
             border-radius: 5px;
             font-weight: bold;
-            background-color: #e74c3c;
+            background-color: #3ce759;
             color: white;
         }
 
@@ -200,7 +200,7 @@
                 <h2 class="achievement-title">Knight's Honor</h2>
                 <p class="achievement-description">Acquire all rare weapons</p>
             </div>
-            <span class="difficulty-tag">Very Hard</span>
+            <span class="difficulty-tag">Easy</span>
         </div>
 
         <div class="guide-section">
