--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
         <!-- <img src="https://assets.xboxservices.com/assets/70/26/70261708-de2c-4bef-b7ba-9b3e4be644d5.jpg"
           alt="Dark Souls"> -->
         <div class="game-card-content">
-          <h2>Dark Souls</h2>
-          <p>Guide to conquering all achievements in the punishing world of Lordran.</p>
+          <h2>Dark Souls 1</h2>
+          <p>Complete guide to all achievements in Dark Souls: Remastered.</p>
         </div>
       </a>
 
       <a href="gbfr/index.html" class="game-card">
         <!-- <img src="https://assetsio.reedpopcdn.com/granblue-fantasy-relink-head-image.jpg" alt="Granblue Fantasy Relink"> -->
         <div class="game-card-content">
-          <h2>Granblue Fantasy Relink</h2>
+          <h2>Granblue Fantasy: Relink</h2>
           <p>Complete guide to all achievements in Granblue Fantasy Relink.</p>
         </div>
       </a>
