Add blurred background image

--- a/ds1/index.html
+++ b/ds1/index.html
@@ -30,6 +30,20 @@
       background-blend-mode: overlay;
     }
 
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-image: url("bg_img.jpg");
+      background-size: contain;
+      background-position: center;
+      filter: blur(10px);
+      z-index: -1;
+    }
+
     header {
       background-color: rgba(0, 0, 0, 0.7);
       color: var(--primary);
