Fix achievement name

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -329,8 +329,8 @@
 
             <h2>Special Achievements</h2>
 
-            <div class="achievement-card" data-name="Lyria's Field Notes">
-                <h3 class="achievement-title"><a href="fieldnotes.html">Lyria's Field Notes</a></h3>
+            <div class="achievement-card" data-name="Reminiscence">
+                <h3 class="achievement-title"><a href="fieldnotes.html">Reminiscence</a></h3>
                 <label class="toggle-container">
                     <input type="checkbox" id="fieldnotes-toggle" data-achievement="fieldnotes"
                         onchange="toggleAchievement(this)">
