Replace Knight's Honor with Enkindle

--- a/ds1/achievements/enkindle/index.html
+++ b/ds1/achievements/enkindle/index.html
@@ -191,13 +191,13 @@
     <div class="breadcrumbs">
         <a href="../../index.html">Home</a> >
         <a href="../index.html">Dark Souls</a> >
-        Knight's Honor
+        Enkindle
     </div>
 
     <div class="achievement-container">
         <div class="achievement-header">
             <div class="achievement-info">
-                <h2 class="achievement-title">Knight's Honor</h2>
+                <h2 class="achievement-title">Enkindle</h2>
                 <p class="achievement-description">Acquire all rare weapons</p>
             </div>
             <span class="difficulty-tag">Easy</span>
@@ -205,7 +205,7 @@
 
         <div class="guide-section">
             <h3>Overview</h3>
-            <p>The Knight's Honor achievement requires you to collect all rare weapons in Dark Souls. This is one of the
+            <p>The Enkindle achievement requires you to collect all rare weapons in Dark Souls. This is one of the
                 most challenging achievements to obtain as it requires multiple playthroughs and careful planning.</p>
             <p>You'll need to reach at least NG++ (third playthrough) to acquire all the boss soul weapons, as you need
                 three souls from Sif to craft all the weapons that require the Soul of Sif.</p>
