--- a/ds1/achievements/enkindle/index.html
+++ b/ds1/achievements/enkindle/index.html
@@ -205,10 +205,11 @@
 
         <div class="guide-section">
             <h3>Overview</h3>
-            <p>The Enkindle achievement requires you to collect all rare weapons in Dark Souls. This is one of the
-                most challenging achievements to obtain as it requires multiple playthroughs and careful planning.</p>
-            <p>You'll need to reach at least NG++ (third playthrough) to acquire all the boss soul weapons, as you need
-                three souls from Sif to craft all the weapons that require the Soul of Sif.</p>
+            <p>The Enkindle achievement is the first achievement that you will obtain in DS1. As such, it is also the
+                easiest.</p>
+            <p>You'll need to exit the starting area, read the tutorial signs on the ground (optional, but recommended),
+                and continue until you reach a ladder. Upon climbing the ladder, there will be a bonfire outside in the
+                courtyard. Simply interact with the bonfire, and you will unlock this achievement.</p>
         </div>
 
         <div class="guide-section">
