Add additional information section

--- a/ds1/achievements/enkindle/index.html
+++ b/ds1/achievements/enkindle/index.html
@@ -212,6 +212,18 @@
                 courtyard. Simply interact with the bonfire, and you will unlock this achievement.</p>
         </div>
 
+        <div class="guide-section">
+            <h3>Additional Information</h3>
+            <p>How bonfires work in Dark Souls:</p>
+            <ol>
+                <li>Recover lost HP</li>
+                <li>Allows for level ups</li>
+                <li>Refill estus flasks to the maximum (dependent on the kindling of the bonfire; addressed later)</li>
+                <li>Restore humanity/kindle bonfire</li>
+                <li>Eventual further utility will be unlocked through merchant purchases and progression</li>
+            </ol>
+        </div>
+
         <a href="../index.html" class="back-button">Back to All Achievements</a>
     </div>
 
