Update breadcrumbs paths

--- a/ds1/achievements/enkindle/index.html
+++ b/ds1/achievements/enkindle/index.html
@@ -189,8 +189,8 @@
     </header>
 
     <div class="breadcrumbs">
-        <a href="../../index.html">Home</a> >
-        <a href="../index.html">Dark Souls</a> >
+        <a href="../../../index.html">Home</a> >
+        <a href="../../index.html">Dark Souls</a> >
         Enkindle
     </div>
 
