Update Dark Souls to DS: Remastered

--- a/ds1/index.html
+++ b/ds1/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dark Souls Achievements</title>
+  <title>Dark Souls: Remastered Achievements</title>
   <style>
     :root {
       --background: #121212;
@@ -219,15 +219,15 @@
 
 <body>
   <header>
-    <h1>Dark Souls Achievements</h1>
+    <h1>Dark Souls: Remastered Achievements</h1>
   </header>
 
   <div class="breadcrumbs">
-    <a href="../index.html">Home</a> > Dark Souls
+    <a href="../index.html">Home</a> > Dark Souls: Remastered
   </div>
 
   <div class="game-info">
-    <h2>Dark Souls</h2>
+    <h2>Dark Souls: Remastered</h2>
     <p>Thou who art Undead, art chosen. In thine exodus from the Undead Asylum, maketh pilgrimage to the land of Ancient
       Lords. When thou ringeth the Bell of Awakening, the fate of the Undead thou shalt know.</p>
   </div>
@@ -248,7 +248,7 @@
   </div>
 
   <footer>
-    <p>Dark Souls Achievement Guide - Praise the Sun!</p>
+    <p>Dark Souls: Remastered Achievement Guide - Praise the Sun!</p>
   </footer>
 
   <script>
