Add Reach Lordran to main page

--- a/ds1/index.html
+++ b/ds1/index.html
@@ -270,6 +270,13 @@
         category: "Progress"
       },
       {
+        id: "reach-lordran",
+        title: "Reach Lordran",
+        description: "Arrive in Lordran",
+        difficulty: "Easy",
+        category: "Progress"
+      },
+      {
         id: "knights-honor",
         title: "Knight's Honor",
         description: "Acquire all rare weapons",
