Update paths for guide links

--- a/ds1/index.html
+++ b/ds1/index.html
@@ -323,7 +323,7 @@
               <p><strong>Category:</strong> ${achievement.category}</p>
             </div>
             <div class="achievement-footer">
-              <a href="achievements/${achievement.id}.html" class="view-guide-btn">View Guide</a>
+              <a href="achievements/${achievement.id}/index.html" class="view-guide-btn">View Guide</a>
             </div>
           </div>
         `;
