--- a/ds1/achievements/enkindle/index.html
+++ b/ds1/achievements/enkindle/index.html
@@ -224,7 +224,7 @@
             </ol>
         </div>
 
-        <a href="../index.html" class="back-button">Back to All Achievements</a>
+        <a href="../../index.html" class="back-button">Back to All Achievements</a>
     </div>
 
     <footer>
