--- a/ds1/achievements/estus-flask/index.html
+++ b/ds1/achievements/estus-flask/index.html
@@ -304,7 +304,7 @@
             </ul>
         </div>
 
-        <a href="../index.html" class="back-button">Back to All Achievements</a>
+        <a href="../../index.html" class="back-button">Back to All Achievements</a>
     </div>
 
     <footer>
