Trim and update temp file

--- a/ds1/achievements/estus-flask/index.html
+++ b/ds1/achievements/estus-flask/index.html
@@ -189,15 +189,15 @@
     </header>
 
     <div class="breadcrumbs">
-        <a href="../../index.html">Home</a> >
-        <a href="../index.html">Dark Souls</a> >
-        Knight's Honor
+        <a href="../../../index.html">Home</a> >
+        <a href="../../index.html">Dark Souls</a> >
+        Enkindle
     </div>
 
     <div class="achievement-container">
         <div class="achievement-header">
             <div class="achievement-info">
-                <h2 class="achievement-title">Knight's Honor</h2>
+                <h2 class="achievement-title">Enkindle</h2>
                 <p class="achievement-description">Acquire all rare weapons</p>
             </div>
             <span class="difficulty-tag">Easy</span>
@@ -205,103 +205,23 @@
 
         <div class="guide-section">
             <h3>Overview</h3>
-            <p>The Knight's Honor achievement requires you to collect all rare weapons in Dark Souls. This is one of the
-                most challenging achievements to obtain as it requires multiple playthroughs and careful planning.</p>
-            <p>You'll need to reach at least NG++ (third playthrough) to acquire all the boss soul weapons, as you need
-                three souls from Sif to craft all the weapons that require the Soul of Sif.</p>
+            <p>The Enkindle achievement is the first achievement that you will obtain in DS1. As such, it is also the
+                easiest.</p>
+            <p>You'll need to exit the starting area, read the tutorial signs on the ground (optional, but recommended),
+                and continue until you reach a ladder. Upon climbing the ladder, there will be a bonfire outside in the
+                courtyard. Simply interact with the bonfire, and you will unlock this achievement.</p>
         </div>
 
         <div class="guide-section">
-            <h3>Required Weapons</h3>
-            <p>You need to collect the following weapon categories:</p>
-            <ul>
-                <li>All boss soul weapons</li>
-                <li>All tail-cut weapons</li>
-                <li>All unique weapons from enemies and locations</li>
-                <li>All covenant reward weapons</li>
-            </ul>
-        </div>
-
-        <div class="guide-section">
-            <h3>Boss Soul Weapons</h3>
-            <div class="weapon-list">
-                <div class="weapon-card">
-                    <h4>Moonlight Butterfly Horn</h4>
-                    <div class="location">Soul of the Moonlight Butterfly + Spear/Thrusting Sword +10</div>
-                    <p>Ascend at Giant Blacksmith in Anor Londo</p>
-                </div>
-
-                <div class="weapon-card">
-                    <h4>Crystal Ring Shield</h4>
-                    <div class="location">Soul of the Moonlight Butterfly + Shield +10</div>
-                    <p>Ascend at Giant Blacksmith in Anor Londo</p>
-                </div>
-
-                <div class="weapon-card">
-                    <h4>Quelaag's Furysword</h4>
-                    <div class="location">Soul of Quelaag + Curved Sword +10</div>
-                    <p>Ascend at Giant Blacksmith in Anor Londo</p>
-                </div>
-
-                <div class="weapon-card">
-                    <h4>Chaos Blade</h4>
-                    <div class="location">Soul of Quelaag + Katana +10</div>
-                    <p>Ascend at Giant Blacksmith in Anor Londo</p>
-                </div>
-            </div>
-            <p><em>Note: This is only a sample of the complete list. There are many more boss soul weapons
-                    required.</em></p>
-        </div>
-
-        <div class="guide-section">
-            <h3>Tail Cut Weapons</h3>
-            <div class="weapon-list">
-                <div class="weapon-card">
-                    <h4>Drake Sword</h4>
-                    <div class="location">Hellkite Dragon's tail</div>
-                    <p>Shoot the tail with arrows from beneath the bridge in Undead Burg</p>
-                </div>
-
-                <div class="weapon-card">
-                    <h4>Dragon King Greataxe</h4>
-                    <div class="location">Dragon King's tail</div>
-                    <p>Cut off Gaping Dragon's tail in the Depths</p>
-                </div>
-
-                <div class="weapon-card">
-                    <h4>Moonlight Greatsword</h4>
-                    <div class="location">Seath the Scaleless' tail</div>
-                    <p>Cut off Seath's tail in the Crystal Cave</p>
-                </div>
-
-                <div class="weapon-card">
-                    <h4>Priscilla's Dagger</h4>
-                    <div class="location">Crossbreed Priscilla's tail</div>
-                    <p>Cut off Priscilla's tail in the Painted World of Ariamis</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="guide-section">
-            <h3>Strategy</h3>
-            <p>To efficiently obtain this achievement:</p>
+            <h3>Additional Information</h3>
+            <p>How bonfires work in Dark Souls:</p>
             <ol>
-                <li>Plan your covenant progress across playthroughs</li>
-                <li>Never consume boss souls - save them for crafting</li>
-                <li>Keep a checklist to track which weapons you've already obtained</li>
-                <li>Focus on tail cuts during your first encounter with each dragon/boss</li>
-                <li>Save Sif's soul for NG++ when you can craft all three weapons</li>
+                <li>Recover lost HP</li>
+                <li>Allows for level ups</li>
+                <li>Refill estus flasks to the maximum (dependent on the kindling of the bonfire; addressed later)</li>
+                <li>Restore humanity/kindle bonfire</li>
+                <li>Eventual further utility will be unlocked through merchant purchases and progression</li>
             </ol>
-        </div>
-
-        <div class="guide-section">
-            <h3>NG++ Requirements</h3>
-            <p>You will need to reach at least NG++ (third playthrough) to get this achievement because:</p>
-            <ul>
-                <li>You need three souls of Sif to craft all three weapons: Greatsword of Artorias, Greatsword of
-                    Artorias (Cursed), and Great Shield of Artorias</li>
-                <li>You need two souls of Gwyn for the Greatshield of Artorias and the Greatsword of Artorias</li>
-            </ul>
         </div>
 
         <a href="../../index.html" class="back-button">Back to All Achievements</a>
