--- a/ds1/achievements/estus-flask/index.html
+++ b/ds1/achievements/estus-flask/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enkindle</title>
+    <title>Estus Flask</title>
     <style>
         :root {
             --background: #121212;
@@ -191,13 +191,13 @@
     <div class="breadcrumbs">
         <a href="../../../index.html">Home</a> >
         <a href="../../index.html">Dark Souls</a> >
-        Enkindle
+        Estus Flask
     </div>
 
     <div class="achievement-container">
         <div class="achievement-header">
             <div class="achievement-info">
-                <h2 class="achievement-title">Enkindle</h2>
+                <h2 class="achievement-title">Estus Flask</h2>
                 <p class="achievement-description">Acquire all rare weapons</p>
             </div>
             <span class="difficulty-tag">Easy</span>
@@ -205,7 +205,7 @@
 
         <div class="guide-section">
             <h3>Overview</h3>
-            <p>The Enkindle achievement is the first achievement that you will obtain in DS1. As such, it is also the
+            <p>The Estus Flask achievement is the first achievement that you will obtain in DS1. As such, it is also the
                 easiest.</p>
             <p>You'll need to exit the starting area, read the tutorial signs on the ground (optional, but recommended),
                 and continue until you reach a ladder. Upon climbing the ladder, there will be a bonfire outside in the
