--- a/ds1/achievements/estus-flask/index.html
+++ b/ds1/achievements/estus-flask/index.html
@@ -198,7 +198,7 @@
         <div class="achievement-header">
             <div class="achievement-info">
                 <h2 class="achievement-title">Estus Flask</h2>
-                <p class="achievement-description">Acquire all rare weapons</p>
+                <p class="achievement-description">Acquire Estus Flask</p>
             </div>
             <span class="difficulty-tag">Easy</span>
         </div>
