--- a/ds1/achievements/estus-flask/index.html
+++ b/ds1/achievements/estus-flask/index.html
@@ -205,11 +205,17 @@
 
         <div class="guide-section">
             <h3>Overview</h3>
-            <p>The Estus Flask achievement is the first achievement that you will obtain in DS1. As such, it is also the
-                easiest.</p>
-            <p>You'll need to exit the starting area, read the tutorial signs on the ground (optional, but recommended),
-                and continue until you reach a ladder. Upon climbing the ladder, there will be a bonfire outside in the
-                courtyard. Simply interact with the bonfire, and you will unlock this achievement.</p>
+            <p>The Estus Flask achievement can be somewhat tricky to obtain, but is necessary to progress.</p>
+            <p>After collecting the first bonfire, enter through the massive doors that lie ahead. Through here, you
+                will meet your first boss, and first major challenge. Seeing as you will do very little damage and have
+                no flasks, it is highly unlikely that you will be able to defeat the Asylum Demon. After entering the
+                room, you will find an open gate at the back left side of the room. Enter through here, and continue
+                with the logical progression. Upon reaching a set of stairs, there will be an enemy that rolls a metal
+                ball down them in an attempt to kill you. If you can avoid dying here (either tanking the damage or
+                baiting out the ball), then you can turn around and notice that the ball has opened a hole in the wall
+                that was once closed off. In here, you will find Oscar of Astora, who will tell you of your fate. At the
+                end of one of my favorite monologues, he will offer you an "undead favorite", the estus flask. Upon
+                receiving the flask, you will unlock this achievement.</p>
         </div>
 
         <div class="guide-section">
