Add additional information

--- a/ds1/achievements/estus-flask/index.html
+++ b/ds1/achievements/estus-flask/index.html
@@ -220,13 +220,14 @@
 
         <div class="guide-section">
             <h3>Additional Information</h3>
-            <p>How bonfires work in Dark Souls:</p>
+            <p>How Estus Flasks work in Dark Souls:</p>
             <ol>
-                <li>Recover lost HP</li>
-                <li>Allows for level ups</li>
-                <li>Refill estus flasks to the maximum (dependent on the kindling of the bonfire; addressed later)</li>
-                <li>Restore humanity/kindle bonfire</li>
-                <li>Eventual further utility will be unlocked through merchant purchases and progression</li>
+                <li>Recover some HP, dependent on the amount of times you have reinforced your flask.</li>
+                <li>Refill when resting at bonfires.</li>
+                <li>
+                    You start with 5 flasks, but this number can go up almost infinitely. There are a few ways to
+                    increase this number:
+                </li>
             </ol>
         </div>
 
