Add methods for obtaining more flasks

--- a/ds1/achievements/estus-flask/index.html
+++ b/ds1/achievements/estus-flask/index.html
@@ -227,6 +227,23 @@
                 <li>
                     You start with 5 flasks, but this number can go up almost infinitely. There are a few ways to
                     increase this number:
+                    <ul>
+                        <li>Resting at a bonfire where there is a Fire Keeper present will net you 10 flasks.</li>
+                        <li>
+                            Kindling the bonfire will net you more flasks:
+                            <ul>
+                                <li>Regular bonfire: 5</li>
+                                <li>Upgrading once (or Fire Keeper present): 10</li>
+                                <li>Upgraded twice (or once with Fire Keeper): 15</li>
+                                <li>Upgraded three times (or twice with Fire Keeper): 20</li>
+                            </ul>
+                            <strong>Note:</strong> You’ll need to progress through the game before being able to kindle
+                            beyond 10 flasks.
+                        </li>
+                        <li>If someone in another world kindles the bonfire you most recently rested at, you'll get an
+                            additional flask.</li>
+                        <li>Slaying NPC invaders can sometimes reward you with extra flasks.</li>
+                    </ul>
                 </li>
             </ol>
         </div>
