--- a/ds1/achievements/estus-flask/index.html
+++ b/ds1/achievements/estus-flask/index.html
@@ -185,12 +185,12 @@
 
 <body>
     <header>
-        <h1>Dark Souls Achievements</h1>
+        <h1>Dark Souls: Remastered Achievements</h1>
     </header>
 
     <div class="breadcrumbs">
         <a href="../../../index.html">Home</a> >
-        <a href="../../index.html">Dark Souls</a> >
+        <a href="../../index.html">Dark Souls: Remastered</a> >
         Estus Flask
     </div>
 
@@ -252,7 +252,7 @@
     </div>
 
     <footer>
-        <p>Dark Souls Achievement Guide - Praise the Sun!</p>
+        <p>Dark Souls: Remastered Achievement Guide - Praise the Sun!</p>
     </footer>
 </body>
 
