--- a/ds1/achievements/enkindle/index.html
+++ b/ds1/achievements/enkindle/index.html
@@ -185,12 +185,12 @@
 
 <body>
     <header>
-        <h1>Dark Souls Achievements</h1>
+        <h1>Dark Souls: Remastered Achievements</h1>
     </header>
 
     <div class="breadcrumbs">
         <a href="../../../index.html">Home</a> >
-        <a href="../../index.html">Dark Souls</a> >
+        <a href="../../index.html">Dark Souls: Remastered</a> >
         Enkindle
     </div>
 
@@ -198,7 +198,7 @@
         <div class="achievement-header">
             <div class="achievement-info">
                 <h2 class="achievement-title">Enkindle</h2>
-                <p class="achievement-description">Acquire all rare weapons</p>
+                <p class="achievement-description">Light bonfire flame.</p>
             </div>
             <span class="difficulty-tag">Easy</span>
         </div>
@@ -228,7 +228,7 @@
     </div>
 
     <footer>
-        <p>Dark Souls Achievement Guide - Praise the Sun!</p>
+        <p>Dark Souls: Remastered Achievement Guide - Praise the Sun!</p>
     </footer>
 </body>
 
