--- a/ds1/achievements/knights-honor/index.html
+++ b/ds1/achievements/knights-honor/index.html
@@ -308,7 +308,7 @@
     </div>
 
     <footer>
-        <p>Dark Souls Achievement Guide - Praise the Sun!</p>
+        <p>Dark Souls: Remastered Achievement Guide - Praise the Sun!</p>
     </footer>
 </body>
 
