Add new achievement

--- a/ds1/index.html
+++ b/ds1/index.html
@@ -277,6 +277,13 @@
         category: "Progress"
       },
       {
+        id: "first-bell",
+        title: "Ring The Bell (Undead Church)",
+        description: "Ring the first Bell of Awakening in the Undead Church",
+        difficulty: "Easy",
+        category: "Progress"
+      },
+      {
         id: "knights-honor",
         title: "Knight's Honor",
         description: "Acquire all rare weapons",
