--- a/ds1/index.html
+++ b/ds1/index.html
@@ -284,6 +284,13 @@
         category: "Progress"
       },
       {
+        id: "covenant-way-of-white",
+        title: "Covenant: Way of White",
+        description: "Discover Way of White covenant",
+        difficulty: "Medium",
+        category: "Covenant"
+      },
+      {
         id: "knights-honor",
         title: "Knight's Honor",
         description: "Acquire all rare weapons",
