Add new achievement

--- a/ds1/index.html
+++ b/ds1/index.html
@@ -291,6 +291,13 @@
         category: "Covenant"
       },
       {
+        id: "second-bell",
+        title: "Ring The Bell (Quelaag's Domain)",
+        description: "Ring the second Bell of Awakening in Quelaag's Domain",
+        difficulty: "Easy",
+        category: "Progress"
+      },
+      {
         id: "knights-honor",
         title: "Knight's Honor",
         description: "Acquire all rare weapons",
