--- a/ds1/index.html
+++ b/ds1/index.html
@@ -298,6 +298,13 @@
         category: "Progress"
       },
       {
+        id: "reach-anor-londo",
+        title: "Reach Anor Londo",
+        description: "Arrive in Anor Londo",
+        difficulty: "Medium",
+        category: "Progress"
+      },
+      {
         id: "knights-honor",
         title: "Knight's Honor",
         description: "Acquire all rare weapons",
