--- a/ds1/index.html
+++ b/ds1/index.html
@@ -305,6 +305,13 @@
         category: "Progress"
       },
       {
+        id: "lordvessel",
+        title: "Lordvessel",
+        description: "Acquire the Lordvessel",
+        difficulty: "Medium",
+        category: "Progress"
+      },
+      {
         id: "knights-honor",
         title: "Knight's Honor",
         description: "Acquire all rare weapons",
