Add new achievement

--- a/ds1/index.html
+++ b/ds1/index.html
@@ -312,6 +312,13 @@
         category: "Progress"
       },
       {
+        id: "rite-of-kindling",
+        title: "Rite of Kindling",
+        description: "Acquire the Rite of Kindling",
+        difficulty: "Easy",
+        category: "Boss Drop"
+      },
+      {
         id: "knights-honor",
         title: "Knight's Honor",
         description: "Acquire all rare weapons",
