Add new achievement

--- a/ds1/index.html
+++ b/ds1/index.html
@@ -319,6 +319,13 @@
         category: "Boss Drop"
       },
       {
+        id: "covenant-chaos-servant",
+        title: "Covenant: Chaos Servant",
+        description: "Discover Chaos Servant covenant",
+        difficulty: "Medium",
+        category: "Covenant"
+      },
+      {
         id: "knights-honor",
         title: "Knight's Honor",
         description: "Acquire all rare weapons",
