Add details for Way of White achievement

--- a/ds1/achievements/covenant-way-of-white/index.html
+++ b/ds1/achievements/covenant-way-of-white/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[achievement]</title>
+    <title>Covenant: Way of White</title>
     <style>
         :root {
             --background: #121212;
@@ -191,16 +191,16 @@
     <div class="breadcrumbs">
         <a href="../../../index.html">Home</a> >
         <a href="../../index.html">Dark Souls: Remastered</a> >
-        [achievement]
+        Covenant: Way of White
     </div>
 
     <div class="achievement-container">
         <div class="achievement-header">
             <div class="achievement-info">
-                <h2 class="achievement-title">[achievement]</h2>
-                <p class="achievement-description">[achievement]</p>
+                <h2 class="achievement-title">Covenant: Way of White</h2>
+                <p class="achievement-description">Discover Way of White Covenant</p>
             </div>
-            <span class="difficulty-tag">[diff]</span>
+            <span class="difficulty-tag">Easy</span>
         </div>
 
         <div class="guide-section">
