--- a/ds1/achievements/covenant-way-of-white/index.html
+++ b/ds1/achievements/covenant-way-of-white/index.html
@@ -205,8 +205,13 @@
 
         <div class="guide-section">
             <h3>Overview</h3>
-            <p>Quick tagline.</p>
-            <p>Deeper explanation.</p>
+            <p>The Way of White Covenant will likely be the first covenant you discover. It is also the easiest covenant
+                to discover.</p>
+            <p>Upon reaching firelink shrine, you will need to locate Petrus in order to complete this achievement. When
+                facing toward the crestfallen warrior in firelink shrine, go through the archway to the right. Continue
+                up the stairs until you see an NPC in a courtyard. Talk to the said NPC, and you will meet Petrus.
+                Continue talking to him until he offers for you to join Way of White. This will unlock the achievement.
+            </p>
         </div>
 
         <div class="guide-section">
