Add information on petrus

--- a/ds1/achievements/covenant-way-of-white/index.html
+++ b/ds1/achievements/covenant-way-of-white/index.html
@@ -206,64 +206,27 @@
         <div class="guide-section">
             <h3>Overview</h3>
             <p>The Way of White Covenant will likely be the first covenant you discover. It is also the easiest covenant
-                to discover.</p>
+                to find.</p>
             <p>Upon reaching firelink shrine, you will need to locate Petrus in order to complete this achievement. When
                 facing toward the crestfallen warrior in firelink shrine, go through the archway to the right. Continue
                 up the stairs until you see an NPC in a courtyard. Talk to the said NPC, and you will meet Petrus.
-                Continue talking to him until he offers for you to join Way of White. This will unlock the achievement.
+                Speak to him multiple times to exhaust his dialogue. Eventually, he will offer to let you join the Way
+                of White.
+            <p><strong>NOTE: Accepting the invitation is not necessary for unlocking the achievement</strong></p>
             </p>
         </div>
 
         <div class="guide-section">
             <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
-            <ol>
-                <li>.</li>
-                <li>
-                    nested list:
-                    <ul>
-                        <li>.</li>
-                        <li>
-                            nested list:
-                            <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                            </ul>
-                            <strong>Note:</strong> note
-                        </li>
-                        <li>.</li>
-                        <li>.</li>
-                    </ul>
-                </li>
-            </ol>
-        </div>
-
-        <div class="guide-section">
-            <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
-            <ol>
-                <li>.</li>
-                <li>
-                    nested list:
-                    <ul>
-                        <li>.</li>
-                        <li>
-                            nested list:
-                            <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                            </ul>
-                            <strong>Note:</strong> note
-                        </li>
-                        <li>.</li>
-                        <li>.</li>
-                    </ul>
-                </li>
-            </ol>
+            <p><strong>About Petrus of Thorolund:</strong></p>
+            <ul>
+                <li>Gives you a <em>Copper Coin</em> if you talk to him after some initial dialogue.</li>
+                <li>Offers basic miracles and items tied to the Way of White playstyle (focused on faith and
+                    healing).</li>
+                <li>Appears somewhat aloof, but has more depth to his character as the game progresses.</li>
+                <li><strong>Note:</strong> Keep an eye on his behavior once more characters begin arriving at
+                    Firelink Shrine. There's more to him than meets the eye.</li>
+            </ul>
         </div>
 
         <a href="../../index.html" class="back-button">Back to All Achievements</a>
