Add more information on Rhea of Thorolund

--- a/ds1/achievements/covenant-way-of-white/index.html
+++ b/ds1/achievements/covenant-way-of-white/index.html
@@ -224,8 +224,22 @@
                 <li>Offers basic miracles and items tied to the Way of White playstyle (focused on faith and
                     healing).</li>
                 <li>Appears somewhat aloof, but has more depth to his character as the game progresses.</li>
-                <li><strong>Note:</strong> Keep an eye on his behavior once more characters begin arriving at
-                    Firelink Shrine. There's more to him than meets the eye.</li>
+                <li><strong>Note:</strong> He is a critical part of the Way of White storyline, which focuses on the
+                    journey of the headpriestess, <em>Rhea of Thorolund</em>.
+                </li>
+            </ul>
+        </div>
+
+        <div class="guide-section">
+            <h3>Additional Information</h3>
+            <p><strong>About Rhea of Thorolund:</strong></p>
+            <ul>
+                <li>Later in the game, you will meet Rhea and her companions behind Petrus (same location).</li>
+                <li>Rhea is headpriestess, and her storyline is closely linked to Petrus's.</li>
+                <li>Rhea will venture into the <em>catacombs</em> with some of her followers. If you are interested in
+                    her questline, be sure to locate her there.</li>
+                <li><strong>Note:</strong> Her storyline has many steps, many of which are quite complex. I will
+                    eventually put together guides for storylines such as hers; will update this later with a link.</li>
             </ul>
         </div>
 
