Add information on covenants

--- a/ds1/achievements/covenant-way-of-white/index.html
+++ b/ds1/achievements/covenant-way-of-white/index.html
@@ -217,8 +217,7 @@
         </div>
 
         <div class="guide-section">
-            <h3>Additional Information</h3>
-            <p><strong>About Petrus of Thorolund:</strong></p>
+            <h3>Additional Information: Petrus of Thorolund</h3>
             <ul>
                 <li>Gives you a <em>Copper Coin</em> if you talk to him after some initial dialogue.</li>
                 <li>Offers basic miracles and items tied to the Way of White playstyle (focused on faith and
@@ -231,8 +230,7 @@
         </div>
 
         <div class="guide-section">
-            <h3>Additional Information</h3>
-            <p><strong>About Rhea of Thorolund:</strong></p>
+            <h3>Additional Information: Rhea of Thorolund</h3>
             <ul>
                 <li>Later in the game, you will meet Rhea and her companions behind Petrus (same location).</li>
                 <li>Rhea is headpriestess, and her storyline is closely linked to Petrus's.</li>
@@ -242,6 +240,27 @@
                     eventually put together guides for storylines such as hers; will update this later with a link.</li>
             </ul>
         </div>
+
+        <div class="guide-section">
+            <h3>What Are Covenants?</h3>
+            <p>Covenants in <em>Dark Souls</em> are like factions or alliances that your character can join. Each one
+                has its own theme, tiered reward structure, and impact on both single-player and online gameplay.</p>
+            <ul>
+                <li>Some covenants are focused on co-op and helping other players.</li>
+                <li>Others are more PvP-oriented, encouraging invasions or duels.</li>
+                <li>Each covenant offers different spells, equipment, or story interactions as rewards for your loyalty.
+                </li>
+                <li>Each covenant will require items to each higher ranks (higher ranks unlock better
+                    rewards), but most covenants require different items.
+                </li>
+                <li><strong>Note:</strong> You can only be in one covenant at a time. Leaving or <em>betraying</em> a
+                    covenant
+                    can have consequences.</li>
+            </ul>
+            <p>The <strong>Way of White</strong> is a good starting point for new players. It's easy to join, has
+                minimal downsides, and helps you stay clear of early invasions if you're playing online.</p>
+        </div>
+
 
         <a href="../../index.html" class="back-button">Back to All Achievements</a>
     </div>
