--- a/terraria/index.html
+++ b/terraria/index.html
@@ -288,6 +288,12 @@
 </head>
 
 <body>
+
+    <div class="bg-stack surface"></div>
+    <div class="bg-stack underground"></div>
+    <div class="bg-stack cavern"></div>
+    <div class="bg-stack hell"></div>
+
     <header>
         <h1>Terraria Achievements</h1>
     </header>
