--- a/terraria/index.html
+++ b/terraria/index.html
@@ -31,14 +31,14 @@
         }
 
         /* :root {
-                --background: #0b1d2b;
-                --surface: #2e5f4d;
-                --primary: #7ed957;
-                --text: #f0f8ff;
-                --secondary-text: #c1dfff;
-                --accent: #2b6783;
-                --completed: #ffd700;
-            } */
+            --background: #0b1d2b;
+            --surface: #2e5f4d;
+            --primary: #7ed957;
+            --text: #f0f8ff;
+            --secondary-text: #c1dfff;
+            --accent: #2b6783;
+            --completed: #ffd700;
+        } */
 
         .bg-stack {
             position: absolute;
@@ -86,7 +86,6 @@
             margin: 0;
             font-family: 'Arial', sans-serif;
             letter-spacing: 1px;
-            text-transform: uppercase;
         }
 
         header a {
@@ -322,7 +321,7 @@
     <div class="bg-stack hell"></div>
 
     <header>
-        <h1>Terraria Achievements</h1>
+        <h1>Becoming a Terrarian</h1>
     </header>
 
     <div class="breadcrumbs">
